--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 
     <title>OvenPlayer</title>
-    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="docs/lib/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-    <link href="lib/new-age.min.css" rel="stylesheet">
+    <link href="docs/lib/new-age.min.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-40491361-8"></script>
@@ -32,13 +32,13 @@
         gtag('config', 'UA-40491361-8');
     </script>
 
-    <script src="lib/vue.min.js"></script>
-    <script src="lib/dash.all.min.js"></script>
-    <script src="lib/clipboard.min.js"></script>
-    <script src="lib/jquery-1.12.4.min.js"></script>
-    <script src="lib/popper.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
-    <script src="../dist/development/ovenplayer/ovenplayer.js"></script>
+    <script src="docs/lib/vue.min.js"></script>
+    <script src="docs/lib/dash.all.min.js"></script>
+    <script src="docs/lib/clipboard.min.js"></script>
+    <script src="docs/lib/jquery-1.12.4.min.js"></script>
+    <script src="docs/lib/popper.min.js"></script>
+    <script src="docs/lib/bootstrap.min.js"></script>
+    <script src="dist/development/ovenplayer/ovenplayer.js"></script>
     <style>
         header.masthead {
             position: relative;
@@ -46,9 +46,9 @@
             padding-top: 150px;
             padding-bottom: 100px;
             color: #fff;
-            background: url(lib/bg_landing.png),#3a3552;
-            background: url(lib/bg_landing.png),-webkit-gradient(linear,right top,left top,from(#3a3552),to(#221d39));
-            background: url(lib/bg_landing.png),linear-gradient(to left,#3a3552,#221d39);
+            background: url(docs/lib/bg_landing.png),#3a3552;
+            background: url(docs/lib/bg_landing.png),-webkit-gradient(linear,right top,left top,from(#3a3552),to(#221d39));
+            background: url(docs/lib/bg_landing.png),linear-gradient(to left,#3a3552,#221d39);
         }
         .btn:hover{
             border : 1px solid  #50e3c2;
@@ -67,10 +67,10 @@
             </div>
             <ul class="navbar-nav   my-2 my-lg-0 ">
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="demo.html">Player Demo</a>
+                    <a class="nav-link text-light" href="docs/demo.html">Player Demo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="ome_demo.html">Ultra Low Latency Demo</a>
+                    <a class="nav-link text-light" href="docs/ome_demo.html">Ultra Low Latency Demo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="https://github.com/AirenSoft/OvenPlayer" target="_blank">GitHub</a>
