--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 
     <title>OvenPlayer</title>
-    <link rel="stylesheet" href="docs/lib/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-    <link href="docs/lib/new-age.min.css" rel="stylesheet">
+    <link href="lib/new-age.min.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-40491361-8"></script>
@@ -32,13 +32,13 @@
         gtag('config', 'UA-40491361-8');
     </script>
 
-    <script src="docs/lib/vue.min.js"></script>
-    <script src="docs/lib/dash.all.min.js"></script>
-    <script src="docs/lib/clipboard.min.js"></script>
-    <script src="docs/lib/jquery-1.12.4.min.js"></script>
-    <script src="docs/lib/popper.min.js"></script>
-    <script src="docs/lib/bootstrap.min.js"></script>
-    <script src="dist/development/ovenplayer/ovenplayer.js"></script>
+    <script src="lib/vue.min.js"></script>
+    <script src="lib/dash.all.min.js"></script>
+    <script src="lib/clipboard.min.js"></script>
+    <script src="lib/jquery-1.12.4.min.js"></script>
+    <script src="lib/popper.min.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
+    <script src="../dist/development/ovenplayer/ovenplayer.js"></script>
     <style>
         header.masthead {
             position: relative;
@@ -46,9 +46,9 @@
             padding-top: 150px;
             padding-bottom: 100px;
             color: #fff;
-            background: url(docs/lib/bg_landing.png),#3a3552;
-            background: url(docs/lib/bg_landing.png),-webkit-gradient(linear,right top,left top,from(#3a3552),to(#221d39));
-            background: url(docs/lib/bg_landing.png),linear-gradient(to left,#3a3552,#221d39);
+            background: url(lib/bg_landing.png),#3a3552;
+            background: url(lib/bg_landing.png),-webkit-gradient(linear,right top,left top,from(#3a3552),to(#221d39));
+            background: url(lib/bg_landing.png),linear-gradient(to left,#3a3552,#221d39);
         }
         .btn:hover{
             border : 1px solid  #50e3c2;
@@ -67,10 +67,10 @@
             </div>
             <ul class="navbar-nav   my-2 my-lg-0 ">
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="docs/demo.html">Player Demo</a>
+                    <a class="nav-link text-light" href="demo.html">Player Demo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="docs/ome_demo.html">Ultra Low Latency Demo</a>
+                    <a class="nav-link text-light" href="ome_demo.html">Ultra Low Latency Demo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="https://github.com/AirenSoft/OvenPlayer" target="_blank">GitHub</a>
@@ -106,17 +106,7 @@
 
 
     <script>
-        var player = "", preSources = "", errorOccured = false;
-        var getParameterByName = function (name, url) {
-            if (!url) url = window.location.href;
-            name = name.replace(/[\[\]]/g, '\\$&');
-            var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-                results = regex.exec(url);
-            if (!results) return null;
-            if (!results[2]) return '';
-            return decodeURIComponent(results[2].replace(/\+/g, ' '));
-        }
-        var urlSources = getParameterByName("sources");
+
         var defaultSources = [{
                 type: 'mp4',
                 file:  '../dist/OCP_480.mp4',
@@ -154,113 +144,19 @@
                 label: "KOR VTT"
             }
         ];
-        if(urlSources){
-            preSources = JSON.parse(urlSources);
-        }
-        console.log("PRE SOURCE : ");
-        console.log(preSources);
         $( document ).ready(function() {
 
-            var clipboard = new ClipboardJS('.btnExport');
-
-            clipboard.on('success', function(e) {
-                $('.btnExport').tooltip('show');
-                setTimeout(function(){
-                    $('.btnExport').tooltip('hide');
-                },3000);
-
-                e.clearSelection();
-            });
-
-
-            player = OvenPlayer.create("player", {
-                sources: preSources || defaultSources,
+            var player = OvenPlayer.create("player", {
+                sources: defaultSources,
                 tracks : tracks
             });
-            player.on("ready", function(error){
-                errorOccured = false;
+            player.on("ready", function(data){
             });
             player.on("error", function(error){
-                errorOccured = true;
                 console.log(error);
-                navigation.errorMessage = error.message;
             });
 
         });
-
-        var navigation = new Vue({
-            el: '#demo-navi',
-            data: {
-                choicedProtocol : "Protocol",
-                protocols : ["webrtc", "rtmp", "dash", "hls", "http"],
-                url : "",
-                sources : preSources||[],
-                sourceId : 0,
-                errorMessage : "",
-                exportUrl : preSources ?  "https://airensoft.github.io/OvenPlayer/docs/index.html?sources="+ encodeURIComponent(JSON.stringify(preSources)) : ""
-            },
-            methods : {
-                setProtocol : function(protocol){
-                    this.choicedProtocol = protocol;
-                },
-                addSource : function(){
-                    var type = "", data = {};
-                    if(this.choicedProtocol == "Protocol"){
-                        this.errorMessage = "Could you please choice a protocol?";
-                        return;
-                    }
-                    if(!this.url){
-                        this.errorMessage = "Could you please enter a streaming url?";
-                        return;
-                    }
-
-
-                    if(this.choicedProtocol === "webrtc" && ( this.url.indexOf('ws:') !== 0 && this.url.indexOf('wss:') !== 0)){
-                        this.errorMessage = "Could you please enter a correct OME URL? ex)ws://dev2.airensoft.com:3333/app/stream_o";
-                        return;
-                    }
-
-                    this.sources.push({
-                        id : this.sourceId ++,
-                        file : this.url,
-                        type : this.choicedProtocol === "http" ? "mp4" : this.choicedProtocol
-                    });
-                    this.errorMessage = "";
-                    this.choicedProtocol = "Protocol";
-                    this.url = "";
-
-                    if(this.sources){
-                        this.exportUrl = "https://airensoft.github.io/OvenPlayer/docs/index.html?sources="+ encodeURIComponent(JSON.stringify(this.sources));
-                    }
-                },
-                removeSource : function(index){
-                    this.sources.splice(index, 1);
-
-                    if(this.sources){
-                        this.exportUrl = "https://airensoft.github.io/OvenPlayer/docs/index.html?sources="+ encodeURIComponent(JSON.stringify(this.sources));
-                    }
-                },
-                loadSources : function(){
-                    if(this.sources && this.sources.length > 0){
-                        if(errorOccured){
-                            player.remove();
-                            player = OvenPlayer.create("player", {
-                                sources: JSON.parse(JSON.stringify(this.sources))
-                            });
-                        }else{
-                            player.load(JSON.parse(JSON.stringify(this.sources)));
-                        }
-                        this.errorMessage = "";
-                    }else{
-                        this.errorMessage = "Could you please add streaming url?";
-                    }
-                },
-                getSources : function(){
-                    return this.sources.length ? this.sources.map(function(source){return {file : source.file, type : source.type};}) :  defaultSources;
-                }
-            }
-        });
-
 
 
 
