--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             </div>
             <ul class="navbar-nav   my-2 my-lg-0 ">
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="demo.html">Player Demo</a>
+                    <a class="nav-link text-light" href="docs/demo.html">Player Demo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="ome_demo.html">Ultra Low Latency Demo</a>
+                    <a class="nav-link text-light" href="docs/ome_demo.html">Ultra Low Latency Demo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="https://github.com/AirenSoft/OvenPlayer" target="_blank">GitHub</a>
