Updated page title

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <meta name="author" content="airensoft">
-    <meta name="title" content="OvenPlayer">
+    <meta name="title" content="OvenPlayer - HTML5 Video Player">
     <meta name="keywords" content="html5-player,ultra-low-latency,webrtc,oven-media-engine">
     <meta name="description" content="The OvenPlayer is a HTML5 player designed to make it easier to play Ultra-low latency streams from the OvenMediaEngine.">
     <meta property="og:title" content="OvenPlayer">
     <meta property="og:description" content="The OvenPlayer is a HTML5 player designed to make it easier to play Ultra-low latency streams from the OvenMediaEngine.">
 
 
-    <title>OvenPlayer</title>
+    <title>OvenPlayer - HTML5 Video Player</title>
     <link rel="stylesheet" href="docs/lib/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="docs/lib/new-age.min.css" rel="stylesheet">
