--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <a class="nav-link text-light" href="https://github.com/AirenSoft/OvenPlayer" target="_blank">GitHub</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="https://github.com/AirenSoft/OvenPlayer/blob/master/docs/api.md" target="_blank">Docs</a>
+                    <a class="nav-link text-light" href="https://airensoft.gitbook.io/ovenplayer/" target="_blank">Docs</a>
                 </li>
             </ul>
         </div>
