Change demo output URL to new domain

--- a/demo/ome_demo.html
+++ b/demo/ome_demo.html
@@ -170,27 +170,27 @@
         omeURL = [
             {
                 type: 'webrtc',
-                file: wsProtocol + '//dev2.airensoft.com' + signallingPort + '/app/stream?transport=tcp',
+                file: wsProtocol + '//demo.ovenplayer.com' + signallingPort + '/app/stream?transport=tcp',
                 label: 'WebRTC/TCP'
             },
             {
                 type: 'webrtc',
-                file: wsProtocol + '//dev2.airensoft.com' + signallingPort + '/app/stream',
+                file: wsProtocol + '//demo.ovenplayer.com' + signallingPort + '/app/stream',
                 label: 'WebRTC'
             },
             {
                 type: 'hls',
-                file: httpProtocol + '//dev2.airensoft.com' + httpStreamingPort + '/app/stream/playlist.m3u8',
+                file: httpProtocol + '//demo.ovenplayer.com' + httpStreamingPort + '/app/stream/playlist.m3u8',
                 label: 'HLS'
             },
             {
                 type: 'dash',
-                file: httpProtocol + '//dev2.airensoft.com' + httpStreamingPort + '/app/stream/manifest.mpd',
+                file: httpProtocol + '//demo.ovenplayer.com' + httpStreamingPort + '/app/stream/manifest.mpd',
                 label: 'MPEG-DASH'
             },
             {
                 type: 'dash',
-                file: httpProtocol + '//dev2.airensoft.com' + httpStreamingPort + '/app/stream/manifest_ll.mpd',
+                file: httpProtocol + '//demo.ovenplayer.com' + httpStreamingPort + '/app/stream/manifest_ll.mpd',
                 label: 'LL MPEG-DASH',
                 lowLatency: true
             },
