Delete unnecessary files and reduce package size

--- a/demo/demo_input.html
+++ b/demo/demo_input.html
@@ -11,7 +11,7 @@
 
     <title>OvenPlayer</title>
     <link rel="icon" href="./assets/images/00_OvenPlayer_Favicon.svg">
-    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
     <style>
