--- a/demo/ome_demo.html
+++ b/demo/ome_demo.html
@@ -11,7 +11,7 @@
 
     <title>OvenPlayer</title>
     <link rel="icon" href="./assets/images/00_OvenPlayer_Favicon.svg">
-    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -28,14 +28,37 @@
         gtag('config', 'UA-40491361-8');
     </script>
 
-    <script src="lib/vue.min.js"></script>
-    <script src="lib/dash.all.debug.js"></script>
-    <script src="lib/clipboard.min.js"></script>
-    <script src="lib/jquery-1.12.4.min.js"></script>
-    <script src="lib/popper.min.js"></script>
+
+
+    <!-- VUE -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
+
+    <!-- underscore -->
+    <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+
+    <!-- highlightjs -->
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.3.1/build/highlight.min.js"></script>
+
+    <!-- js-beautify -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.14.0/beautify.min.js"></script>
+
+    <!-- clipboard -->
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.8/dist/clipboard.min.js"></script>
+
+    <!-- popperjs -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+
+    <!-- hls.js -->
     <script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dashjs/3.2.1/dash.all.min.js" integrity="sha512-K8ychE2luu1+zrt4MiDhr8L8B6zPB+x/EofroMF6LygAn+Oh/EadU18WgChXuOeCAan0y5/IQGS06izToR8xnQ==" crossorigin="anonymous"></script>
-    <script src="../dist/ovenplayer.js"></script>
+
+    <!-- dash.js -->
+    <script src="https://cdn.jsdelivr.net/npm/dashjs@3.2.1/dist/dash.all.min.js"></script>
+
+    <!-- OvenPlayer -->
+    <script src="https://cdn.jsdelivr.net/npm/ovenplayer/dist/ovenplayer.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
