Change device selection label

--- a/demo/demo_input.html
+++ b/demo/demo_input.html
@@ -195,7 +195,7 @@
                         <div class="col-lg-6 border-start border-2 mb-3 mb-lg-0">
                             <h6>Video settings</h6>
                             <fieldset>
-                                <label for="videoSourceSelect">Source</label>
+                                <label for="videoSourceSelect">Device</label>
                                 <select name="" id="videoSourceSelect" class="form-control constraintSelect mb-2">
                                 </select>
 
@@ -218,7 +218,7 @@
                             <h6>Audio settings</h6>
                             <fieldset>
                                 <div id="audioSourceSelectArea">
-                                    <label for="audioSourceSelect">Source</label>
+                                    <label for="audioSourceSelect">Device</label>
                                     <select class="form-control constraintSelect" id="audioSourceSelect">
                                         <option selected>Choose...</option>
                                     </select>
